Title of the art

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <head>
   <title>Paper Arc</title>
   <meta charset="utf-8" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
-        rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap"
+        rel="stylesheet">
   <link rel="stylesheet"
         href="./stylesheets/style.css" />
-  <!-- <script src="./scripts/libraries/jquery.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
   <script src="./scripts/libraries/d3.min.js"></script>
   <script src="./scripts/libraries/d3-selection.min.js"></script>
@@ -18,11 +15,9 @@
 </head>
 
 <body>
-  <!-- <div class="title-area">
-        <div class="title">Title Lorem Itsum</div>
-        <div class="description">간략한 설명이 들어갑니다. 두 문장 가량의 서브 제목 느낌의 간략한 설명이 들어갑니다.</div>
-
-    </div> -->
+  <div class="title-area">
+    <div class="title">Article Arc</div>
+  </div>
   <div class="section">
     <div class="section-title">1. Introduction</div>
     <div class="section-drawing"><svg id="section-1"></svg></div>
