--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
   <div class="title-area">
     <div class="title">Article Arc</div>
+    <svg id="legend"></svg>
   </div>
   <div class="section">
     <div class="section-title">1. Introduction</div>
@@ -49,5 +50,6 @@
   </div>
 </body>
 <script src="./scripts/index.js"></script>
+<script src="./scripts/legend.js"></script>
 
 </html>
