아크 디자인 변경: 높이 가변

--- a/index.html
+++ b/index.html
@@ -19,36 +19,33 @@
     <div class="title">Article Arc</div>
     <svg id="legend"></svg>
   </div>
-  <div class="section">
-    <div class="section-title">1. Introduction</div>
-    <div class="section-drawing"><svg id="section-1"></svg></div>
-  </div>
-  <div class="section">
-    <div class="section-title">2. Wikipedia Revision History Extraction and Visualization</div>
-    <div class="section-drawing"><svg id="section-2"></svg></div>
-  </div>
-  <div class="section">
-    <div class="section-title">3. Visual Design of Flow Circle</div>
-    <div class="section-drawing"><svg id="section-3"></svg></div>
-  </div>
-  <div class="section">
-    <div class="section-title">4. Understanding the Controversy of “Gun Politics in the United States” Using Flow Circle
+  <div class="sections">
+
+    <div class="section">
+      <div class="section-title">Wikipedia Revision History Extraction and Visualization</div>
+      <div class="section-drawing"><svg id="section-1"></svg></div>
     </div>
-    <div class="section-drawing"><svg id="section-4"></svg></div>
+    <div class="section">
+      <div class="section-title">Visual Design of Flow Circle</div>
+      <div class="section-drawing"><svg id="section-2"></svg></div>
+    </div>
+    <div class="section">
+      <div class="section-title">Understanding the Controversy of “Gun Politics in the United States” Using Flow Circle
+      </div>
+      <div class="section-drawing"><svg id="section-3"></svg></div>
+    </div>
+    <div class="section">
+      <div class="section-title">Detail Comparison Between Keywords and Authors</div>
+      <div class="section-drawing"><svg id="section-4"></svg></div>
+    </div>
+    <div class="section">
+      <div class="section-title">User Study</div>
+      <div class="section-drawing"><svg id="section-5"></svg></div>
+    </div>
   </div>
-  <div class="section">
-    <div class="section-title">5. Detail Comparison Between Keywords and Authors</div>
-    <div class="section-drawing"><svg id="section-5"></svg></div>
-  </div>
-  <div class="section">
-    <div class="section-title">6. User Study</div>
-    <div class="section-drawing"><svg id="section-6"></svg></div>
-  </div>
-  <div class="section">
-    <div class="section-title">7. Conclusion</div>
-    <div class="section-drawing"><svg id="section-7"></svg></div>
-  </div>
+
 </body>
+<script src="./scripts/data.js"></script>
 <script src="./scripts/index.js"></script>
 <script src="./scripts/legend.js"></script>
 
