--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <svg id="legend"></svg>
   </div>
   <div class="sections">
-
-    <div class="section">
+    <div class="section first-section">
       <div class="section-title">Wikipedia Revision History Extraction and Visualization</div>
       <div class="section-drawing"><svg id="section-1"></svg></div>
     </div>
@@ -29,7 +28,7 @@
       <div class="section-title">Visual Design of Flow Circle</div>
       <div class="section-drawing"><svg id="section-2"></svg></div>
     </div>
-    <div class="section">
+    <div class="section third-section">
       <div class="section-title">Understanding the Controversy of “Gun Politics in the United States” Using Flow Circle
       </div>
       <div class="section-drawing"><svg id="section-3"></svg></div>
